--- a/packages/nr8-jmespath/package.json
+++ b/packages/nr8-jmespath/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nr8/core",
+  "name": "@nr8/jmespath",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -14,11 +14,8 @@
     "test-ts": "tsc --noEmit"
   },
   "dependencies": {
-    "@nr8/jmespath": "^1.0.0",
-    "async": "^3.2.1",
-    "node-cache": "^5.1.2",
-    "pino": "^6.13.3",
-    "pino-pretty": "^7.0.1"
+    "@daz.is/jmespath": "^1.3.1",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.10",
@@ -27,13 +24,10 @@
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-typescript": "^7.13.0",
     "@babel/register": "^7.13.8",
-    "@types/async": "^3.2.8",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@types/chai": "^4.2.15",
-    "@types/lodash": "^4.14.175",
     "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.43",
-    "@types/pino": "^6.3.11",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "chai": "^4.3.4",
