--- a/packages/nr8-core/package.json
+++ b/packages/nr8-core/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@nr8/jmespath": "^1.0.0",
     "async": "^3.2.1",
+    "js-yaml": "^4.1.0",
     "node-cache": "^5.1.2",
     "pino": "^6.13.3",
     "pino-pretty": "^7.0.1"
