--- a/packages/nr8-gateway/resources/00-actions-rd.yaml
+++ b/packages/nr8-gateway/resources/00-actions-rd.yaml
@@ -1,13 +1,10 @@
 ---
-apiVersion: nr8.io/v1alpha
 type: ResourceDefinition
 metadata:
   name: actions.nr8.io
 spec:
-  group: nr8.io
+  group: gateway.nr8.io
   names:
     type: Action
     plural: actions
     singular: action
-  versions:
-    - name: v1alpha
