--- a/packages/nr8-gateway/resources/00-queries-rd.yaml
+++ b/packages/nr8-gateway/resources/00-queries-rd.yaml
@@ -1,13 +1,10 @@
 ---
-apiVersion: nr8.io/v1alpha
 type: ResourceDefinition
 metadata:
   name: queries.nr8.io
 spec:
-  group: nr8.io
+  group: gateway.nr8.io
   names:
     type: Query
     plural: queries
     singular: query
-  versions:
-    - name: v1alpha
