--- a/packages/nr8-gateway/resources/00-requests-rd.yaml
+++ b/packages/nr8-gateway/resources/00-requests-rd.yaml
@@ -1,16 +1,13 @@
 ---
-apiVersion: nr8.io/v1alpha
 type: ResourceDefinition
 metadata:
   name: requests.nr8.io
 spec:
   transient: true
-  group: nr8.io
+  group: gateway.nr8.io
   names:
     type: Request
     plural: requests
     singular: request
     shortNames:
       - req
-  versions:
-    - name: v1alpha
