--- a/packages/nr8-gateway/resources/00-services-rd.yaml
+++ b/packages/nr8-gateway/resources/00-services-rd.yaml
@@ -1,15 +1,12 @@
 ---
-apiVersion: nr8.io/v1alpha
 type: ResourceDefinition
 metadata:
   name: services.nr8.io
 spec:
-  group: nr8.io
+  group: gateway.nr8.io
   names:
     type: Service
     plural: services
     singular: service
     shortNames:
       - svc
-  versions:
-    - name: v1alpha
