--- a/packages/nr8-core/package.json
+++ b/packages/nr8-core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nr8/core",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "license": "MIT",
   "scripts": {
     "build": "babel ./ --out-dir ./ --extensions \".ts,.tsx\"",
@@ -14,6 +14,7 @@
     "test-ts": "tsc --noEmit"
   },
   "dependencies": {
+    "@nr8/yaml": "^1.0.0",
     "async": "^3.2.1",
     "lodash": "^4.17.21",
     "pino": "^6.13.3",
@@ -34,7 +35,6 @@
     "@types/pino": "^6.3.11",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "babel-eslint": "^10.1.0",
-    "babel-plugin-module-resolver": "^4.1.0",
     "chai": "^4.3.4",
     "eslint": "^7.22.0",
     "eslint-config-standard": "^16.0.2",
