--- a/packages/nr8-gateway/tsconfig.json
+++ b/packages/nr8-gateway/tsconfig.json
@@ -8,8 +8,9 @@
     }
   },
   "include": [
-    "**/*"
-, "../examples/config.ts"  ],
+    "**/*",
+    "../examples/config.ts"
+  ],
   "exclude": [
     "node_modules"
   ]
