--- a/packages/nr8-yaml/package.json
+++ b/packages/nr8-yaml/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nr8/gateway",
+  "name": "@nr8/yaml",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -14,9 +14,7 @@
     "test-ts": "tsc --noEmit"
   },
   "dependencies": {
-    "@nr8/core": "^1.0.0",
-    "@nr8/jmespath": "^1.0.0",
-    "@nr8/yaml": "^1.0.0",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
@@ -27,11 +25,12 @@
     "@babel/preset-typescript": "^7.13.0",
     "@babel/register": "^7.13.8",
     "@types/chai": "^4.2.15",
-    "@types/lodash": "^4.14.175",
+    "@types/js-yaml": "^4.0.3",
     "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.43",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "chai": "^4.3.4",
     "eslint": "^7.22.0",
     "eslint-config-standard": "^16.0.2",
