--- a/packages/nr8-core/package.json
+++ b/packages/nr8-core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nr8/core",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "index.js",
   "license": "MIT",
   "scripts": {
     "build": "babel ./ --out-dir ./ --extensions \".ts,.tsx\"",
