--- a/packages/nr8-gateway/package.json
+++ b/packages/nr8-gateway/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "babel ./ --out-dir ./ --extensions \".ts,.tsx\"",
     "build-declarations": "tsc --project tsconfig.json --outDir ./ --declaration --emitDeclarationOnly",
+    "dev": "babel-node ./index.ts --extensions \".ts,.tsx\"",
     "lint": "eslint --config .eslintrc.json ./ --ext .ts --ext .tsx",
     "postbuild": "npm run build-declarations",
     "test": "NODE_ENV=testing mocha './{,!(node_modules)/**}/*.spec.ts'",
@@ -40,6 +41,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "mocha": "^8.3.2",
+    "nodemon": "^2.0.13",
     "typescript": "^4.2.3"
   }
 }
