--- a/packages/nr8-gateway/tsconfig.json
+++ b/packages/nr8-gateway/tsconfig.json
@@ -8,10 +8,10 @@
     }
   },
   "include": [
-    "**/*",
-    "../examples/config.ts"
+    "**/*"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "*.spec.ts",
   ]
 }
