--- a/packages/nr8-yaml/package.json
+++ b/packages/nr8-yaml/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "babel ./ --out-dir ./ --extensions \".ts,.tsx\"",
     "build-declarations": "tsc --project tsconfig.json --outDir ./ --declaration --emitDeclarationOnly",
+    "clean": "git clean -f -X -e node_modules",
     "lint": "eslint --config .eslintrc.json ./ --ext .ts --ext .tsx",
     "postbuild": "npm run build-declarations",
     "test": "NODE_ENV=testing mocha './{,!(node_modules)/**}/*.spec.ts'",
