--- a/packages/nr8-yaml/tsconfig.json
+++ b/packages/nr8-yaml/tsconfig.json
@@ -9,8 +9,9 @@
   },
   "include": [
     "**/*"
-, "../examples/config.ts"  ],
+  ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "*.spec.ts",
   ]
 }
