--- a/packages/nr8-gateway/package.json
+++ b/packages/nr8-gateway/package.json
@@ -7,7 +7,7 @@
     "build": "babel ./ --out-dir ./ --extensions \".ts,.tsx\"",
     "build-declarations": "tsc --project tsconfig.json --outDir ./ --declaration --emitDeclarationOnly",
     "clean": "git clean -f -X -e node_modules",
-    "dev": "babel-node ./index.ts --extensions \".ts,.tsx\"",
+    "dev": "nodemon --watch ./ --exec ts-node ./index.ts",
     "lint": "eslint --config .eslintrc.json ./ --ext .ts --ext .tsx",
     "postbuild": "npm run build-declarations",
     "test": "NODE_ENV=testing mocha './{,!(node_modules)/**}/*.spec.ts'",
@@ -43,6 +43,7 @@
     "eslint-plugin-promise": "^4.3.1",
     "mocha": "^8.3.2",
     "nodemon": "^2.0.13",
+    "ts-node": "^10.3.0",
     "typescript": "^4.2.3"
   }
 }
