--- a/packages/nr8-yaml/package.json
+++ b/packages/nr8-yaml/package.json
@@ -7,6 +7,7 @@
     "build": "babel ./ --out-dir ./ --extensions \".ts,.tsx\"",
     "build-declarations": "tsc --project tsconfig.json --outDir ./ --declaration --emitDeclarationOnly",
     "clean": "git clean -f -X -e node_modules",
+    "dev": "nodemon --watch ./ -r ./babel.dev.js ./index.ts",
     "lint": "eslint --config .eslintrc.json ./ --ext .ts --ext .tsx",
     "postbuild": "npm run build-declarations",
     "test": "NODE_ENV=testing mocha './{,!(node_modules)/**}/*.spec.ts'",
@@ -21,7 +22,6 @@
   "devDependencies": {
     "@babel/cli": "^7.13.10",
     "@babel/core": "^7.13.10",
-    "@babel/node": "^7.13.12",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-typescript": "^7.13.0",
     "@babel/register": "^7.13.8",
@@ -31,7 +31,6 @@
     "@types/node": "^14.14.43",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "babel-eslint": "^10.1.0",
-    "babel-plugin-module-resolver": "^4.1.0",
     "chai": "^4.3.4",
     "eslint": "^7.22.0",
     "eslint-config-standard": "^16.0.2",
@@ -40,6 +39,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "mocha": "^8.3.2",
+    "nodemon": "^2.0.13",
     "typescript": "^4.2.3"
   }
 }
