--- a/packages/nr8-gateway/package.json
+++ b/packages/nr8-gateway/package.json
@@ -30,6 +30,7 @@
     "@types/chai": "^4.2.15",
     "@types/lodash": "^4.14.175",
     "@types/mocha": "^8.2.2",
+    "@types/node": "^16.11.7",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "babel-eslint": "^10.1.0",
     "chai": "^4.3.4",
