--- a/packages/nr8-core/package.json
+++ b/packages/nr8-core/package.json
@@ -16,7 +16,7 @@
     "test-ts": "tsc --noEmit"
   },
   "dependencies": {
-    "@nr8/yaml": "^1.0.0",
+    "@nr8/lib-yaml": "^1.0.0",
     "async": "^3.2.1",
     "lodash": "^4.17.21",
     "pino": "^6.13.3",
