--- a/packages/nr8-server-core/package.json
+++ b/packages/nr8-server-core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nr8/jmespath",
+  "name": "@nr8/server-core",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -7,7 +7,7 @@
     "build": "babel ./ --out-dir ./ --extensions \".ts,.tsx\"",
     "build-declarations": "tsc --project tsconfig.json --outDir ./ --declaration --emitDeclarationOnly",
     "clean": "git clean -f -X -e node_modules",
-    "dev": "nodemon --watch ./ -r ./babel.dev.js ./index.ts",
+    "dev": "nodemon --watch ./ -r ./babel.dev.js ./index.ts ",
     "lint": "eslint --config .eslintrc.json ./ --ext .ts --ext .tsx",
     "postbuild": "npm run build-declarations",
     "test": "NODE_ENV=testing mocha './{,!(node_modules)/**}/*.spec.ts'",
@@ -16,7 +16,8 @@
     "test-ts": "tsc --noEmit"
   },
   "dependencies": {
-    "@daz.is/jmespath": "^1.3.1",
+    "@nr8/core": "^1.0.0",
+    "fastify": "^3.23.1",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
@@ -25,10 +26,12 @@
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-typescript": "^7.13.0",
     "@babel/register": "^7.13.8",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@types/async": "^3.2.8",
     "@types/chai": "^4.2.15",
+    "@types/lodash": "^4.14.175",
     "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.43",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
     "babel-eslint": "^10.1.0",
     "chai": "^4.3.4",
     "eslint": "^7.22.0",
