--- a/packages/nr8-server-fastify/package.json
+++ b/packages/nr8-server-fastify/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nr8/rest-server",
+  "name": "@nr8/server-fastify",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -16,7 +16,7 @@
     "test-ts": "tsc --noEmit"
   },
   "dependencies": {
-    "@nr8/core": "^1.0.0",
+    "@nr8/server-core": "^1.0.0",
     "fastify": "^3.23.1",
     "lodash": "^4.17.21"
   },
@@ -26,10 +26,11 @@
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-typescript": "^7.13.0",
     "@babel/register": "^7.13.8",
+    "@types/async": "^3.2.8",
     "@types/chai": "^4.2.15",
     "@types/lodash": "^4.14.175",
     "@types/mocha": "^8.2.2",
-    "@types/node": "^16.11.7",
+    "@types/node": "^14.14.43",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "babel-eslint": "^10.1.0",
     "chai": "^4.3.4",
