--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,10 @@
 {
+  "version": "0.0.0",
   "packages": [
     "packages/*"
   ],
-  "version": "0.0.0"
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  }
 }
