--- a/packages/nr8-lib-jmespath/package.json
+++ b/packages/nr8-lib-jmespath/package.json
@@ -2,6 +2,7 @@
   "name": "@nr8/lib-jmespath",
   "version": "0.0.1",
   "main": "index.js",
+  "private": false,
   "license": "MIT",
   "scripts": {
     "build": "babel ./ --out-dir ./ --extensions \".ts,.tsx\"",
