--- a/packages/nr8-examples/package.json
+++ b/packages/nr8-examples/package.json
@@ -42,5 +42,6 @@
     "mocha": "^8.3.2",
     "nodemon": "^2.0.13",
     "typescript": "^4.2.3"
-  }
+  },
+  "gitHead": "fa8c850ab5d57d361c8f6c0fe1b057aec5f90e15"
 }
