add npm link to gateway so the gateway controller can be reached by core from the example http server

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "env": "development"
   },
   "scripts": {
+    "bootstrap": "lerna bootstrap --hoist --force-local",
     "clean": "lerna clean -y && rm -rf ./node_modules",
-    "postinstall": "lerna bootstrap --hoist --force-local"
+    "postinstall": "npm run bootstrap",
+    "postbootstrap": "npm link @nr8/gateway"
   },
   "dependencies": {
     "lerna": "^4.0.0"
