--- a/packages/nr8-examples/package.json
+++ b/packages/nr8-examples/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@nr8/server-fastify": "^0.0.2",
+    "@nr8/gateway": "^0.0.2",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
