fix controller init for gateway

--- a/packages/nr8-examples/package.json
+++ b/packages/nr8-examples/package.json
@@ -8,7 +8,7 @@
     "build": "babel ./ --out-dir ./ --extensions \".ts,.tsx\"",
     "build-declarations": "tsc --project tsconfig.json --outDir ./ --declaration --emitDeclarationOnly",
     "clean": "git clean -f -X -e node_modules",
-    "dev": "nodemon --watch ./ -r ./babel.dev.js ./index.ts ",
+    "dev": "nodemon --watch ../ -r ./babel.dev.js ./index.ts ",
     "lint": "eslint --config .eslintrc.json ./ --ext .ts --ext .tsx",
     "postbuild": "npm run build-declarations",
     "test": "NODE_ENV=testing mocha './{,!(node_modules)/**}/*.spec.ts'",
