--- a/packages/nr8-examples/package.json
+++ b/packages/nr8-examples/package.json
@@ -9,6 +9,7 @@
     "build-declarations": "tsc --project tsconfig.json --outDir ./ --declaration --emitDeclarationOnly",
     "clean": "git clean -f -X -e node_modules",
     "dev": "nodemon --watch ../ -r ./babel.dev.js ./index.ts ",
+    "one": "node -r ./babel.dev.js",
     "lint": "eslint --config .eslintrc.json ./ --ext .ts --ext .tsx",
     "postbuild": "npm run build-declarations",
     "test": "NODE_ENV=testing mocha './{,!(node_modules)/**}/*.spec.ts'",
@@ -17,8 +18,10 @@
     "test-ts": "tsc --noEmit"
   },
   "dependencies": {
-    "@nr8/server-fastify": "^0.0.2",
+    "@nr8/core": "^0.0.2",
     "@nr8/gateway": "^0.0.2",
+    "@nr8/server-fastify": "^0.0.2",
+    "fastify": "^3.24.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
