drop server-core, doesn't provide much value and fix gateway plugin to load all defs and controllers

--- a/packages/nr8-gateway/package.json
+++ b/packages/nr8-gateway/package.json
@@ -20,6 +20,7 @@
     "@nr8/core": "^0.0.2",
     "@nr8/lib-jmespath": "^0.0.2",
     "@nr8/lib-yaml": "^0.0.2",
+    "async": "^3.2.1",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
