--- a/packages/nr8-lib-jmespath/.eslintrc.json
+++ b/packages/nr8-lib-jmespath/.eslintrc.json
@@ -2,10 +2,10 @@
   "env": {
     "browser": true,
     "es6": true,
-    "mocha": true
+    "jest/globals": true
   },
   "plugins": [
-    "mocha"
+    "jest"
   ],
   "extends": ["standard"],
   "parser": "babel-eslint",
@@ -13,7 +13,6 @@
     "typescript": true
   },
   "rules": {
-    "mocha/no-skipped-tests": 1,
     "no-unused-expressions": 1,
     "no-unused-vars": 1
   }
