--- a/packages/nr8-lib-jmespath/package.json
+++ b/packages/nr8-lib-jmespath/package.json
@@ -11,7 +11,7 @@
     "dev": "nodemon --watch ./ ./index.ts",
     "lint": "eslint --config .eslintrc.json ./ --ext .ts --ext .tsx",
     "postbuild": "npm run build-declarations",
-    "test": "NODE_ENV=testing jest",
+    "test": "jest",
     "test-dev": "NODE_ENV=development mocha -R min --watch --watch-files ./ --extension ts,tsx",
     "test-one": "NODE_ENV=development mocha -R min",
     "test-ts": "tsc --noEmit"
@@ -27,6 +27,7 @@
     "@babel/preset-typescript": "^7.13.0",
     "@babel/register": "^7.13.8",
     "@types/async": "^3.2.8",
+    "@types/jest": "^27.0.3",
     "@types/lodash": "^4.14.175",
     "@types/node": "^14.14.43",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
