--- a/packages/nr8-lib-jmespath/tsconfig.json
+++ b/packages/nr8-lib-jmespath/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "esModuleInterop": true,
+    "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
       "*": ["*"],
@@ -12,6 +13,6 @@
   ],
   "exclude": [
     "node_modules",
-    "*.spec.ts",
+    "*.test.ts",
   ]
 }
