--- a/packages/nr8-core/package.json
+++ b/packages/nr8-core/package.json
@@ -8,18 +8,18 @@
     "build": "babel ./ --out-dir ./ --extensions \".ts,.tsx\"",
     "build-declarations": "tsc --project tsconfig.json --outDir ./ --declaration --emitDeclarationOnly",
     "clean": "git clean -f -X -e node_modules",
-    "dev": "nodemon --watch ./ -r ./babel.dev.js ./index.ts",
+    "dev": "nodemon --watch ./ ./index.ts",
     "lint": "eslint --config .eslintrc.json ./ --ext .ts --ext .tsx",
     "postbuild": "npm run build-declarations",
-    "test": "NODE_ENV=testing mocha './{,!(node_modules)/**}/*.spec.ts'",
-    "test-dev": "NODE_ENV=development mocha -R min --watch --watch-files ./ --extension ts,tsx",
-    "test-one": "NODE_ENV=development mocha -R min",
+    "test": "jest",
+    "test-dev": "jest --watch",
     "test-ts": "tsc --noEmit"
   },
   "dependencies": {
     "@nr8/lib-yaml": "^0.0.2",
     "async": "^3.2.1",
     "lodash": "^4.17.21",
+    "nanoid": "^3.1.30",
     "pino": "^6.13.3",
     "pino-pretty": "^7.0.1"
   },
@@ -30,21 +30,19 @@
     "@babel/preset-typescript": "^7.13.0",
     "@babel/register": "^7.13.8",
     "@types/async": "^3.2.8",
-    "@types/chai": "^4.2.15",
+    "@types/jest": "^27.0.3",
     "@types/lodash": "^4.14.175",
-    "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.43",
     "@types/pino": "^6.3.11",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "babel-eslint": "^10.1.0",
-    "chai": "^4.3.4",
     "eslint": "^7.22.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^25.3.0",
     "eslint-plugin-mocha": "^8.1.0",
-    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
-    "mocha": "^8.3.2",
+    "jest": "^27.4.0",
     "nodemon": "^2.0.13",
     "typescript": "^4.2.3"
   },
