--- a/packages/nr8-lib-jmespath/package.json
+++ b/packages/nr8-lib-jmespath/package.json
@@ -8,7 +8,8 @@
     "build": "babel ./ --out-dir ./ --extensions \".ts,.tsx\"",
     "build-declarations": "tsc --project tsconfig.json --outDir ./ --declaration --emitDeclarationOnly",
     "clean": "git clean -f -X -e node_modules",
-    "dev": "nodemon --watch ./ ./index.ts",
+    "one": "nodemon --watch ./ -r ./babel.register.js",
+    "dev": "nodemon --watch ./ -r ./babel.register.js ./index.ts ",
     "lint": "eslint --config .eslintrc.json ./ --ext .ts --ext .tsx",
     "postbuild": "npm run build-declarations",
     "test": "jest",
