--- a/packages/nr8-dashboard/package.json
+++ b/packages/nr8-dashboard/package.json
@@ -11,6 +11,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nr8/gateway": "^0.0.2",
+    "@nr8/server-fastify": "^0.0.2",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -20,6 +22,7 @@
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "nodemon": "^2.0.15",
     "typescript": "4.5.3"
   },
   "gitHead": "fa8c850ab5d57d361c8f6c0fe1b057aec5f90e15"
