--- a/packages/nr8-dashboard/package.json
+++ b/packages/nr8-dashboard/package.json
@@ -27,6 +27,7 @@
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
     "nodemon": "^2.0.15",
+    "prettier": "^2.5.1",
     "typescript": "4.5.3"
   },
   "gitHead": "fa8c850ab5d57d361c8f6c0fe1b057aec5f90e15"
