--- a/packages/nr8-dashboard/package.json
+++ b/packages/nr8-dashboard/package.json
@@ -15,7 +15,6 @@
     "build-storybook-docs": "build-storybook --docs"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.8.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
@@ -24,7 +23,8 @@
     "framer-motion": "^4.1.17",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
