--- a/packages/nr8-dashboard/package.json
+++ b/packages/nr8-dashboard/package.json
@@ -21,8 +21,8 @@
     "@emotion/styled": "^11.6.0",
     "@nr8/gateway": "^0.0.2",
     "@nr8/server-fastify": "^0.0.2",
-    "@reduxjs/toolkit": "^1.7.2",
     "framer-motion": "^4.1.17",
+    "lodash": "^4.17.21",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
