--- a/packages/nr8-dashboard/package.json
+++ b/packages/nr8-dashboard/package.json
@@ -22,6 +22,7 @@
     "@nr8/gateway": "^0.0.2",
     "@nr8/server-fastify": "^0.0.2",
     "framer-motion": "^4.1.17",
+    "immer": "^9.0.12",
     "lodash": "^4.17.21",
     "next": "12.0.7",
     "react": "17.0.2",
