--- a/packages/nr8-dashboard/package.json
+++ b/packages/nr8-dashboard/package.json
@@ -21,14 +21,12 @@
     "@emotion/styled": "^11.6.0",
     "@nr8/gateway": "^0.0.2",
     "@nr8/server-fastify": "^0.0.2",
+    "@nr8/react-redux": "^0.0.1",
     "framer-motion": "^4.1.17",
-    "immer": "^9.0.12",
-    "lodash": "^4.17.21",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1",
-    "react-redux": "^7.2.6"
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
