fix external deps issue with nextjs

--- a/packages/nr8-dashboard/package.json
+++ b/packages/nr8-dashboard/package.json
@@ -5,6 +5,7 @@
   "private": false,
   "license": "MIT",
   "scripts": {
+    "analyze": "ANALYZE=true next build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -20,8 +21,8 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@nr8/gateway": "^0.0.2",
-    "@nr8/server-fastify": "^0.0.2",
     "@nr8/react-redux": "^0.0.1",
+    "@nr8/server-fastify": "^0.0.2",
     "framer-motion": "^4.1.17",
     "next": "12.0.7",
     "react": "17.0.2",
@@ -34,6 +35,7 @@
     "@storybook/addon-actions": "^6.4.10",
     "@storybook/addon-essentials": "^6.4.10",
     "@storybook/addon-interactions": "^6.4.14",
+    "@next/bundle-analyzer": "^12.0.10",
     "@storybook/addon-links": "^6.4.10",
     "@storybook/jest": "0.0.5",
     "@storybook/react": "^6.4.10",
