re-added react-redux-toolkit to nr8 namespace

--- a/packages/react-redux-toolkit/.npmignore
+++ b/packages/react-redux-toolkit/.npmignore
@@ -1,11 +1,12 @@
 # deps
 .gitignore
+.prettierrc
 
 .git/
 .unotes/
 node_modules/
 
 # source
-decorators.ts
-index.ts
+*.ts
+!*.d.ts
 tsconfig.json
