--- a/packages/nr8-dashboard/package.json
+++ b/packages/nr8-dashboard/package.json
@@ -16,39 +16,41 @@
     "build-storybook-docs": "build-storybook --docs"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.1.5",
-    "@chakra-ui/react": "^1.8.3",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
+    "@chakra-ui/icons": "^1.1.7",
+    "@chakra-ui/react": "^1.8.6",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@nr8/gateway": "^0.0.2",
-    "@nr8/react-redux": "^0.0.1",
+    "@nr8/react-redux-toolkit": "^0.0.1",
     "@nr8/server-fastify": "^0.0.2",
-    "framer-motion": "^4.1.17",
-    "next": "12.0.7",
+    "framer-motion": "^6.2.8",
+    "next": "12.1.0",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.7",
-    "@storybook/addon-a11y": "^6.4.14",
-    "@storybook/addon-actions": "^6.4.10",
-    "@storybook/addon-essentials": "^6.4.10",
-    "@storybook/addon-interactions": "^6.4.14",
-    "@next/bundle-analyzer": "^12.0.10",
-    "@storybook/addon-links": "^6.4.10",
-    "@storybook/jest": "0.0.5",
-    "@storybook/react": "^6.4.10",
-    "@storybook/testing-library": "0.0.8",
-    "@types/node": "16.11.12",
-    "@types/react": "17.0.37",
-    "babel-loader": "^8.2.3",
-    "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7",
+    "@babel/core": "^7.17.8",
+    "@next/bundle-analyzer": "^12.1.0",
+    "@storybook/addon-a11y": "^6.4.19",
+    "@storybook/addon-actions": "^6.4.19",
+    "@storybook/addon-essentials": "^6.4.19",
+    "@storybook/addon-interactions": "^6.4.19",
+    "@storybook/addon-links": "^6.4.19",
+    "@storybook/jest": "0.0.10",
+    "@storybook/react": "^6.4.19",
+    "@storybook/testing-library": "0.0.9",
+    "@types/node": "17.0.23",
+    "@types/react": "17.0.43",
+    "babel-loader": "^8.2.4",
+    "eslint": "8.11.0",
+    "eslint-config-next": "12.1.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-storybook": "^0.5.7",
     "nodemon": "^2.0.15",
-    "prettier": "^2.5.1",
+    "prettier": "^2.6.1",
     "ts-dedent": "^2.2.0",
-    "typescript": "4.5.3"
-  },
-  "gitHead": "fa8c850ab5d57d361c8f6c0fe1b057aec5f90e15"
+    "typescript": "4.6.3"
+  }
 }
