--- a/packages/nr8-dashboard/package.json
+++ b/packages/nr8-dashboard/package.json
@@ -28,7 +28,9 @@
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "slate": "^0.76.0",
+    "slate-react": "^0.76.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
